--- a/views/dm/partials/chat-style.ejs
+++ b/views/dm/partials/chat-style.ejs
@@ -1,4 +1,5 @@
 <style>
+  @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
   .container{max-width:1170px; margin:auto;}
   img{ max-width:100%;}
   .inbox_people {
@@ -14,18 +15,34 @@
   }
   .top_spac{ margin: 20px 0 0;}
 
-  .recent_heading {float: left; width:40%;}
+  .recent_heading {float: left; width:40%; font-family: 'Noto Sans KR', sans-serif;}
   .srch_bar {
     display: inline-block;
     text-align: right;
     width: 60%; padding:
   }
   .headind_srch{ padding:10px 29px 10px 20px; overflow:hidden; border-bottom:1px solid #c4c4c4;}
-
+  /* .headind_srch input{ border:1px solid #cdcdcd; border-width:0 0 1px 0; width:80%; padding:2px 0 4px 6px; background:none;}
+  .headind_srch .input-group-addon button {
+    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+    border: medium none;
+    padding: 0;
+    color: #707070;
+    font-size: 18px;
+  }
+  .headind_srch .input-group-addon { margin: 0 0 0 -27px;} */
   .recent_heading h4 {
     color: #05728f;
     font-size: 21px;
     margin: auto;
+  }
+  /* .recent_heading button{ border:1px solid #cdcdcd; border-width:0 0 1px 0; width:80%; padding:2px 0 4px 6px; background:none;} */
+  .recent_heading button {
+    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+    border: medium none;
+    padding: 0;
+    color: #707070;
+    font-size: 18px;
   }
   .srch_bar input{ border:1px solid #cdcdcd; border-width:0 0 1px 0; width:80%; padding:2px 0 4px 6px; background:none;}
   .srch_bar .input-group-addon button {
