--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,3 +1,5 @@
+@import url(//fonts.googleapis.com/earlyaccess/nanumpenscript.css);
+
 body {
   font-family: 'Open Sans', sans-serif;
 }
@@ -15,8 +17,8 @@ body {
 
 .navbar-brand
 {
-  font-size: 1.4em;
-
+  font-size: 2.0em;
+  font-family: 'Nanum Pen Script', cursive;
 }
 
 div.about {
