--- a/views/dm/index.ejs
+++ b/views/dm/index.ejs
@@ -10,13 +10,13 @@
   <%- include('../partials/nav') %>
 
   <div class="container">
-    <h3 class=" text-center">Messaging</h3>
+    <h3 class="text-center">Messaging</h3>
     <div class="messaging">
       <div class="inbox_msg">
         <div class="inbox_people">
           <div class="headind_srch">
             <div class="recent_heading">
-              <h4>채팅 목록</h4>
+              <h4>채팅 목록 <button type="button" onclick=""><i class="fa fa-refresh" aria-hidden="true"></i></button></h4>
             </div>
             <div class="srch_bar">
               <div class="stylish-input-group">
