--- a/views/dm/partials/chat-style.ejs
+++ b/views/dm/partials/chat-style.ejs
@@ -22,21 +22,12 @@
     width: 60%; padding:
   }
   .headind_srch{ padding:10px 29px 10px 20px; overflow:hidden; border-bottom:1px solid #c4c4c4;}
-  /* .headind_srch input{ border:1px solid #cdcdcd; border-width:0 0 1px 0; width:80%; padding:2px 0 4px 6px; background:none;}
-  .headind_srch .input-group-addon button {
-    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-    border: medium none;
-    padding: 0;
-    color: #707070;
-    font-size: 18px;
-  }
-  .headind_srch .input-group-addon { margin: 0 0 0 -27px;} */
   .recent_heading h4 {
     color: #05728f;
     font-size: 21px;
     margin: auto;
   }
-  /* .recent_heading button{ border:1px solid #cdcdcd; border-width:0 0 1px 0; width:80%; padding:2px 0 4px 6px; background:none;} */
+
   .recent_heading button {
     background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
     border: medium none;
@@ -77,6 +68,7 @@
 
   .active_chat{ background:#ebebeb;}
 
+  .incoming_msg{ overflow:hidden; margin:26px 0 26px;}
   .incoming_msg_img {
     display: inline-block;
     width: 6%;
