--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -23,7 +23,7 @@
         <!-- 1 -->
         <li>
           <a href="/dm/" class="nav-link" onclick="clearNotification()">
-            <i class='far fa-comment-dots' style='font-size:24px'>
+            <i class='far fa-comment-dots' style='font-size:24px; position:relative'>
               <span class="button__badge"></span>
             </i>
           </a>
