--- a/views/dm/index.ejs
+++ b/views/dm/index.ejs
@@ -16,7 +16,7 @@
         <div class="inbox_people">
           <div class="headind_srch">
             <div class="recent_heading">
-              <h4>채팅 목록 <button type="button" onclick=""><i class="fa fa-refresh" aria-hidden="true"></i></button></h4>
+              <h4>채팅 목록 <button type="button" onclick=""><i class="fa fa-refresh" style="cursor: pointer;" aria-hidden="true"></i></button></h4>
             </div>
             <div class="srch_bar">
               <div class="stylish-input-group">
