--- a/views/partials/socket.ejs
+++ b/views/partials/socket.ejs
@@ -1,10 +1,8 @@
 <script>
   var socket = io();
   $(".button__badge").hide();
-  console.log('isAuthenticated? ' + `<%= isAuthenticated %>`);
-  socket.emit('socket init', 'notification', `<%= currentUser %>`
-      ? `<%= currentUser.username %>`
-      : `''`);
+  socket.emit('socket init', 'notification', `<%= currentUser.username %>`);
+
   socket.on('redirect', function () {
     socket.emit('disconnect');
     window.location.replace("../");
