--- a/public/css/master.css
+++ b/public/css/master.css
@@ -103,16 +103,32 @@ div.about {
 {
   width : 400px;
   text-align: center;
-    overflow-x: auto;
+  overflow-x: auto;
 }
 
-.board-table .author,
-.board-table .date
+.board-table .views
 {
+  width : 30px;
+  text-align: center;
+  overflow-x: auto;
+}
+
+.board-table .author
+{
+  width : 100px;
   text-align: center;
 
-    overflow-x: auto;
-
+}
+.board-table .date
+{
+  width: 80px;
+  text-align: center;
+}
+.board-table .likes
+{
+  width: 30px;
+  text-align: center;
+  overflow-x: auto;
 }
 .small {
   font-size: smaller;
