--- a/views/dm/partials/chat-socket.ejs
+++ b/views/dm/partials/chat-socket.ejs
@@ -1,15 +1,16 @@
 <script>
   $(".msg_history").hide();
   $(".input_msg_write").hide();
-  // $("body").on("click","#refresh",refreshChatList);
+  var refresh = $("#refresh_i");
+  var inbox = $(".inbox_chat");
+  refresh.on("click", refreshChatList);
 
-  // var chatId = "<%= chatId %>"
-  //   ? "<%= chatId %>"
-  //   : "notification";
-  var target_username = "";
+  var target_username = `<%= target %>`;
   var passKey = `<%= passKey %>`;
+  console.log('passKey? ' + passKey);
   $(function () {
     socket.emit('request chat list', username, passKey);
+    if (target_username) socket.emit('chat init', username, target_username, passKey);
     $(".write_msg").keyup(function(event){
       if (event.which == 13){
         sendMsg();
@@ -37,9 +38,6 @@
     });
   });
   socket.on('chat init', function(){
-    // if (chatId != 'notification') {
-    //   showChat();
-    // }
     showChat();
   });
 
@@ -51,12 +49,13 @@
   }
 
   function loadChatBySelection(elem) {
-    // $(".chat_list active_chat").toggleClass(".chat_list active_chat").toggleClass("chat_list");
-    // $(elem).toggleClass("chat_list").toggleClass("chat_list active_chat");
+    var active_chat = $(".active_chat");
+    active_chat.removeClass("active_chat"); // .chat_list
+    $(elem).addClass("active_chat");
     var i = $(elem).attr("data-index"); // seems unnecessary?
-    var target_username = $(elem).attr("id");
+    target_username = $(elem).attr("id");
+    console.log ('$(elem).attr("id") = '+target_username);
     socket.emit('chat init', username, target_username, passKey);
-    // socket.emit('socket init', username, passKey);
   }
 
   socket.on('load log', function ({recentLog}){
@@ -64,53 +63,33 @@
     $('.msg_history').scrollTop($('.msg_history')[0].scrollHeight);
   });
 
-  socket.on('system message', function (msg) {});
+  socket.on('system message', function (msg) {
 
-  function refreshChatList(){
-    $("body").off("click","#refresh",refreshChatList);
-    $(".chat_list").remove();
-    $("#loading").show();
-    socket.emit('request chat list', username, passKey);
-    $("body").delay(1000).on("click","#refresh",refreshChatList);
-  }
-
-  socket.on('receive chat list', ({list}) => {
-    // console.log(data);
-    $("#loading").hide();
-    $(".inbox_chat").append(list);
   });
 
-  function loadChatList(index, username, msg, date) {
-    var str_row;
-    str_row = `<div id="`;
-    str_row += username;
-    str_row += `" class="chat_list`;
-    // str_row += active
-    //   ? ` active_chat`
-    //   : ``;
-    // str_row += `" data-index="`;
-    // str_row += index;
-    str_row += `" style="cursor: pointer;" onclick="loadChatBySelection(this)">`;
-    str_row += `<div class="chat_people">`;
-    str_row += `<div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>`;
-    str_row += `<div class="chat_ib"><h5>`;
-    str_row += username;
-    // is a string
-    str_row += `<span class="chat_date">`;
-    str_row += date ? date : ``;
-    // date would be something like Dec 23
-    str_row += `</span></h5><p>`;
-    str_row += msg ? msg : ``;
-    str_row += `</p></div></div></div>`;
-    $(".inbox_chat").append(str_row);
-
+  function refreshChatList(){
+    $(this).off("click", refreshChatList);
+    inbox.empty();
+    $("#loading").show();
+    socket.emit('request chat list', username, passKey);
+    $(this).delay(1000).on("click", refreshChatList);
   }
 
-  function toggleActive(elem) {
-    // $(".chat_list active_chat").toggleClass('chat_list');
-    $(elem).toggleClass('chat_list');
-    $(elem).toggleClass('chat_list active_chat');
+  socket.on('update chat list', function (username, msg, date) {
+    var list_item = inbox.find("#" + username);
+    list_item.find(".chat_date").html(date);
+    list_item.find("p").html(msg);
+    list_item.prependTo(inbox);
+  });
 
-  }
+  socket.on('receive chat list', ({list}) => {
+    $("#loading").hide();
+    inbox.append(list);
+    if (target_username){
+      console.log('target\'s username = ' + target_username);
+      var list_item = inbox.find("#" + target_username);
+      list_item.addClass("active_chat");
+    }
+  });
 
 </script>
