--- a/views/partials/boards/show/card.ejs
+++ b/views/partials/boards/show/card.ejs
@@ -7,29 +7,21 @@
 
     <div class="col-md-7 col-lg-8 col-xl-9 order-sm-2 order-md-1">
       <% if(post.attachment) { %>
-              <div class="ml-2">
-     <!-- 1 --> <small>📁 Attachment: <a href="/files/<%= post.attachment.serverFileName %>/<%= post.attachment.originalFileName %>"><%= post.attachment.originalFileName %></a> (<%= util.bytesToSize(post.attachment.size) %>)</small>
-     <br>
-     <img src = "/files/<%= post.attachment.serverFileName %>/<%= post.attachment.originalFileName %>">
-
-              </div>
-            <% } %>
-             </div>
-
-
-    <div class="col-md-7 col-lg-8 col-xl-9 order-sm-2 order-md-1">
-      <div class="post-body p-2"><%= post.body %>
-
-
-
-
-
+      <div class="ml-2">
+        <!-- 1 --> <small>📁 Attachment: <a href="/files/<%= post.attachment.serverFileName %>/<%= post.attachment.originalFileName %>"><%= post.attachment.originalFileName %></a> (<%= util.bytesToSize(post.attachment.size) %>)</small>
+        <br>
+        <img src="/files/<%= post.attachment.serverFileName %>/<%= post.attachment.originalFileName %>">
 
       </div>
+      <% } %>
     </div>
 
 
-
+    <div class="col-md-7 col-lg-8 col-xl-9 order-sm-2 order-md-1">
+      <div class="post-body p-2">
+        <%= post.body %>
+      </div>
+    </div>
 
 
     <div class="col-md-5 col-lg-4 col-xl-3 order-sm-1 order-md-2">
@@ -43,13 +35,13 @@
         </div>
         <% if(post.updatedAt) { %>
         <div><span>수정일</span> :
-           <span data-date-time="<%= post.updatedAt %>"><%= post.updatedAt %>
-           </span>
+          <span data-date-time="<%= post.updatedAt %>"><%= post.updatedAt %>
+          </span>
         </div>
         <% } %>
 
         <div><span>좋아요</span> :
-           <%= post.likes %>
+          <%= post.likes %>
 
         </div>
 
@@ -61,4 +53,5 @@
 
   </div>
 </div>
+
 </html>
