--- a/views/home/welcome.ejs
+++ b/views/home/welcome.ejs
@@ -10,6 +10,7 @@
         <h1>우리 동네 이야기</h1>
         <P>우리동네 소통의 장 </p>
       </div>
+      <div style = "width:33%; float:left">
       <table class= "minitable" >
         <span> <i class='far fa-thumbs-up' style='font-size:24px'></i> 공지사항 BEST </span>
         <tbody>
@@ -38,7 +39,8 @@
         </tbody>
 
       </table>
-
+</div>
+<div style = "width:33%; float:left">
       <table class= "minitable" >
         <span> <i class='far fa-thumbs-up' style='font-size:24px'></i>자유게시판 BEST </span>
         <tbody>
@@ -67,6 +69,9 @@
         </tbody>
 
       </table>
+    </div>
+
+<div style = "width:33%; float:right">
 <table>
       <span> <i class='far fa-thumbs-up' style='font-size:24px'></i>직거래 BEST </span>
       <tbody>
@@ -95,7 +100,7 @@
       </tbody>
 
 </table>
-
+</div>
 
 
     </div>
