--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -21,6 +21,9 @@
       <ul class="navbar-nav ml-auto">
         <% if(isAuthenticated){ %>
         <!-- 1 -->
+        <% if(currentUser.isAdmin){ %>
+          <li class="nav-item"><a href="/users" class="nav-link">관리자 페이지</a></li>
+          <% } %>
         <li>
           <a href="/dm/" class="nav-link" onclick="clearNotification()">
             <i class='far fa-comment-dots' style='font-size:24px; position:relative'>
