--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -16,6 +16,7 @@
     <th scope="col" class = "username"> 아이디 </th>
     <th scope="col" class = "name" > 이름 </th>
     <th scope="col" class = "verified"> 인증 </th>
+    <th scope="col" class = "del"> 지우기 </th>
     <th scope="col" class = "addr"> 주소 </th>
   </tr>
 </thead>
@@ -40,13 +41,31 @@
             </td>
 
       <form action="/users/verified/<%= user.username %>?_method=put" method="post">
+
             <td class="verified" >
               <div class="ellipsis">
-
-                <a class="btn btn-primary" href = "/users/verified/<%=user.username%>">  <%= user.verified %></a>
+                <a class="btn btn-primary <%= user.verified?'disabled':'' %>" href = "/users/verified/<%=user.username%>">   승인 </a>
                 </div>
               </td>
-            </form>
+      </form>
+
+
+          <form action="/users/delete<%= user.username %>?_method = delete" method="post">
+              <td class="del" >
+                <div class="ellipsis">
+              <a class="btn btn-primary" href="/users/delete/<%=user.username%>" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">지우기</a>
+            </div>
+          </td>
+          </form>
+
+
+
+
+
+
+
+
+
             <td class= "addr">
               <div class="ellipsis"><%= user.addr %>
               </div>
