--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -16,7 +16,7 @@
     <th scope="col" class = "username"> 아이디 </th>
     <th scope="col" class = "name" > 이름 </th>
     <th scope="col" class = "verified"> 인증 </th>
-    <th scope="col" class = "del"> 지우기 </th>
+    <th scope="col" class = "sus"> 정지 </th>
     <th scope="col" class = "addr"> 주소 </th>
   </tr>
 </thead>
@@ -44,29 +44,32 @@
 
             <td class="verified" >
               <div class="ellipsis">
-                <a class="btn btn-primary <%= user.verified?'disabled':'' %>" href = "/users/verified/<%=user.username%>">   승인 </a>
+                <a class="btn <%=user.verified?'btn-primary':'btn-warning'%>
+                <%= user.verified?'disabled':'btn-secondary'%>" href = "/users/verified/<%=user.username%>">
+                  <%=user.verified?'승인완료':'승인요청중'%>
+                 </a>
                 </div>
               </td>
       </form>
 
 
-          <form action="/users/delete<%= user.username %>?_method = delete" method="post">
-              <td class="del" >
+          <form action="/users/suspended/<%= user.username %>?_method=put" method="post">
+              <td class="sus" >
                 <div class="ellipsis">
-              <a class="btn btn-primary" href="/users/delete/<%=user.username%>" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">지우기</a>
+              <a class="btn <%=user.suspended?'btn-danger':'btn-danger'%> <%= user.suspended?'disabled':'btn-secondary'%>"
+                href="/users/suspended/<%=user.username%>" onclick="confirm('Do you want to suspend this user?')?this.parentElement.submit():null;">
+              <%=user.suspended?'정지됨':'정지하기'%>
+                </a>
+              <a class="btn <%=user.suspended?'btn-warning':'btn-secondary'%> <%= user.suspended?'':'disabled'%>"
+                href="/users/unsuspended/<%=user.username%>" onclick="confirm('Do you want to unsuspend this user?')?this.parentElement.submit():null;">
+              <%=user.suspended?'정지해제':'이용중'%>
+
+              </a>
             </div>
           </td>
           </form>
 
-
-
-
-
-
-
-
-
-            <td class= "addr">
+    <td class= "addr">
               <div class="ellipsis"><%= user.addr %>
               </div>
             </td>
