translating in Korean email duplicate and username duplicate change name in trade

--- a/views/boards/trades/new.ejs
+++ b/views/boards/trades/new.ejs
@@ -11,8 +11,8 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb p-1 pl-2 pr-2">
           <li class="breadcrumb-item"><a href="/">홈</a></li>
-          <li class="breadcrumb-item"><a href="/boards/trades">직거래</a></li>
-          <li class="breadcrumb-item active" aria-current="page">직거래 게시판</li>
+          <li class="breadcrumb-item"><a href="/boards/trades">장터</a></li>
+          <li class="breadcrumb-item active" aria-current="page">장터 게시판</li>
         </ol>
       </nav>
 
