--- a/views/boards/trades/show.ejs
+++ b/views/boards/trades/show.ejs
@@ -13,7 +13,7 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb p-1 pl-2 pr-2">
         <li class="breadcrumb-item"><a href="/">홈</a></li>
-        <li class="breadcrumb-item"><a href="/boards/trades">직거래 게시판</a></li>
+        <li class="breadcrumb-item"><a href="/boards/trades">장터 게시판</a></li>
         <li class="breadcrumb-item active" aria-current="page"><%= post.title %></li>
       </ol>
     </nav>
@@ -22,7 +22,7 @@
 
     <%- include('../../partials/boards/show/buttons') %>
 
-    
+
 
 
 
