--- a/views/boards/trades/edit.ejs
+++ b/views/boards/trades/edit.ejs
@@ -11,9 +11,9 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb p-1 pl-2 pr-2">
           <li class="breadcrumb-item"><a href="/">홈</a></li>
-          <li class="breadcrumb-item"><a href="/boards/trades">직거래 게시판</a></li>
+          <li class="breadcrumb-item"><a href="/boards/trades">장터 게시판</a></li>
           <li class="breadcrumb-item"><a href="/boards/trades/<%= post._id %>"><%= post.title %></a></li>
-          <li class="breadcrumb-item active" aria-current="page">Edit Trade</li>
+          <li class="breadcrumb-item active" aria-current="page">수정하기</li>
         </ol>
       </nav>
 
