--- a/views/boards/trades/index.ejs
+++ b/views/boards/trades/index.ejs
@@ -10,7 +10,7 @@
 
   <div class="container mb-3">
 
-    <h2 class="mb-3">직거래 게시판</h2>
+    <h2 class="mb-3">장터 게시판</h2>
     <small>집에 안쓰는 물건을 팔아보세요!</small>
 
     <%- include('../../partials/boards/index/board-table') %>
