--- a/views/partials/boards/new/form.ejs
+++ b/views/partials/boards/new/form.ejs
@@ -1,34 +1,35 @@
-
-<form action="/boards/<%= boardName%>" enctype="multipart/form-data" method="post"><!-- 1 -->
+<form action="/boards/<%= boardName%>" enctype="multipart/form-data" method="post">
+  <!-- 1 -->
 
 
   <div class="form-group">
     <label for="title">제목</label>
     <input type="text" id="title" name="title" value="<%= post.title %>" class="form-control <%= (errors.title)?'is-invalid':'' %>">
     <% if(errors.title){ %>
-      <span class="invalid-feedback"><%= errors.title.message %></span>
+    <span class="invalid-feedback"><%= errors.title.message %></span>
     <% } %>
   </div>
 
 
-      <div class="form-group">                                                          <!-- 2 -->
-  <label for="attachment">Attachment</label>                                      <!-- 2 -->
-            <input type="file" name="attachment" class="form-control-file" id="attachment"> <!-- 2 -->
-     </div>
+  <div class="form-group">
+    <!-- 2 -->
+    <label for="attachment"><font style="color:#6464FF; font-weight:bold">첨부 파일</font> 이미지 파일 (jpg, jpeg, gif, png) 만 업로드가 가능합니다.</label>
+    <input type="file" name="attachment" class="form-control-file" id="attachment">
+  </div>
 
 
   <div class="form-group">
     <label for="body">내용</label>
     <textarea id="body" name="body" rows="5" class="form-control <%= (errors.body)?'is-invalid':'' %>"><%= post.body %></textarea>
     <% if(errors.body){ %>
-      <span class="invalid-feedback"><%= errors.body.message %></span>
+    <span class="invalid-feedback"><%= errors.body.message %></span>
     <% } %>
   </div>
 
   <% if(errors.unhandled){ %>
-    <div class="invalid-feedback b-block">
-      <%= errors.unhandled %>
-    </div>
+  <div class="invalid-feedback b-block">
+    <%= errors.unhandled %>
+  </div>
   <% } %>
 
   <div>
