--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -35,10 +35,16 @@
         </li>
         <li class="nav-item"><a href="/users/<%= currentUser.username %>" class="nav-link">나의 계정</a></li>
         <li class="nav-item"><a href="/logout" class="nav-link">로그아웃</a></li>
-        <% if(currentUser.suspended){ %>
+            <% if(currentUser.suspended){ %>
             <li class="nav-item"><a class="nav-link" style = 'color:red'>
               <i class='fas fa-ban'style='color:red'></i>정지된 유저</a></li>
-          <% } %>
+            <% } %>
+            <% if(!currentUser.verified){ %>
+              <li class="nav-item"><a class="nav-link" style = 'color:blue'>
+                <i class="fas fa-exclamation-triangle"></i>미인증 상태</a></li>
+              <% } else { %>
+
+              <% } %>
         <% } else { %>
         <li class="nav-item"><a href="/users/new" class="nav-link">회원가입</a></li>
         <li class="nav-item"><a href="/login" class="nav-link">로그인</a></li>
