--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -25,10 +25,12 @@
           <!-- 3 -->
           <span class="invalid-feedback"><%= errors.username.message %></span>
           <% } %>
+          <small>영문 4~12 글자.</small>
         </div>
       </div>
+
       <div class="form-group row">
-        <label for="name" class="col-sm-3 col-form-label">닉네임
+        <label for="name" class="col-sm-3 col-form-label">이름(실명)
 
           <small style="color:red">*</small>
         </label>
@@ -38,6 +40,23 @@
           <!-- 3 -->
           <span class="invalid-feedback"><%= errors.name.message %></span>
           <% } %>
+          <small> 실명과 주소를 대조해서 인증해드립니다. </small>
+        </div>
+      </div>
+
+
+      <div class="form-group row">
+        <label for="nickname" class="col-sm-3 col-form-label">닉네임
+
+          <small style="color:red">*</small>
+        </label>
+        <div class="col-sm-9">
+          <input type="text" id="nickname" name="nickname" value="<%= user.nickname %>" class="form-control <%= (errors.name)?'is-invalid':'' %>"> <!-- 1, 2 -->
+          <% if(errors.nickname){ %>
+          <!-- 3 -->
+          <span class="invalid-feedback"><%= errors.nickname.message %></span>
+          <% } %>
+          <small> 다른사용자에게 보여질 이름입니다. </small>
         </div>
       </div>
       <div class="form-group row">
@@ -53,12 +72,15 @@
         </div>
       </div>
       <div class="form-group row">
-        <label for="addr" class="col-sm-3 col-form-label">주소</label>
+        <label for="addr" class="col-sm-3 col-form-label">주소
+        <small style="color:red">*</small>
+        </label>
         <div class="col-sm-9">
           <input type="text" id="addr" name="addr" value="<%= user.addr %>" class="form-control <%= (errors.addr)?'is-invalid':'' %>"> <!-- 1, 2 -->
           <% if(errors.addr){ %>
           <span class="invalid-feedback"><%= errors.addr.message %></span>
           <% } %>
+          <small>현재 거주중인 동, 호 수를 정확히 입력해주세요!( 인증받지 못한 아이디는 장터게시판을 이용하실 수 없습니다.)</small>
         </div>
       </div>
 
@@ -72,6 +94,7 @@
           <!-- 3 -->
           <span class="invalid-feedback"><%= errors.password.message %></span>
           <% } %>
+          <small>영문 숫자 조합 4~16글자</small>
         </div>
       </div>
       <div class="form-group row">
@@ -101,7 +124,7 @@
       <% } %>
 
       <div class="form-group">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">제출</button>
       </div>
     </form>
 
