--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -34,10 +34,10 @@
 
       <div>
         <a class="btn btn-primary" href="/users">뒤로가기</a>
-        <a class="btn btn-primary" href="/users/<%= user.username %>/edit">수정</a>
-        <form action="/users/<%= user.username %>?_method=delete" method="post" class="d-inline">
+        <a class="btn btn-primary" href="/users/<%= user.username %>/edit">수정하기</a>
+        <!-- <form action="/users/<%= user.username %>?_method=delete" method="post" class="d-inline">
           <a class="btn btn-primary" href="javascript:void(0)" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">지우기</a>
-        </form>
+        </form> -->
       </div>
 
     </div>
