--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -28,27 +28,46 @@
 
         <div class="form-group row">
           <label for="username" class="col-sm-3 col-form-label">아이디
-          <small style="color:red">*</small></label>
+        </label>
           <div class="col-sm-9">
-            <input type="text" id="username" name="username" value="<%= user.username %>" class="form-control <%= (errors.username)?'is-invalid':'' %>"> <!-- 2 -->
-            <% if(errors.username){ %> <!-- 3 -->
+            <input type="text" id="username" name="username" value="<%= user.username %>" class="form-control <%= (errors.username)?'is-invalid':'' %>" readonly>
+            <% if(errors.username){ %>
               <span class="invalid-feedback"><%= errors.username.message %></span>
             <% } %>
           </div>
         </div>
 
+
         <div class="form-group row">
-          <label for="name" class="col-sm-3 col-form-label">닉네임
-            <small style="color:red">*</small></label>
+          <label for="name" class="col-sm-3 col-form-label">이름
+          </label>
           <div class="col-sm-9">
-            <input type="text" id="name" name="name" value="<%= user.name %>" class="form-control <%= (errors.name)?'is-invalid':'' %>"> <!-- 2 -->
-            <% if(errors.name){ %> <!-- 3 -->
+            <input type="text" id="name" name="name" value="<%= user.name %>" class="form-control <%= (errors.name)?'is-invalid':'' %>" readonly>
+            <% if(errors.name){ %>
               <span class="invalid-feedback"><%= errors.name.message %></span>
             <% } %>
           </div>
         </div>
+
+
+
+
+
         <div class="form-group row">
-          <label for="addr" class="col-sm-3 col-form-label">주소</label>
+          <label for="name" class="col-sm-3 col-form-label">닉네임
+            <small style="color:red">*</small></label>
+          <div class="col-sm-9">
+            <input type="text" id="nickname" name="nickname" value="<%= user.nickname %>" class="form-control <%= (errors.name)?'is-invalid':'' %>"> <!-- 2 -->
+            <% if(errors.nickname){ %> <!-- 3 -->
+              <span class="invalid-feedback"><%= errors.nickname.message %></span>
+            <% } %>
+          </div>
+        </div>
+
+
+        <div class="form-group row">
+          <label for="addr" class="col-sm-3 col-form-label">주소
+          <small style="color:red">*</small></label>
           <div class="col-sm-9">
             <input type="text" id="addr" name="addr" value="<%= user.addr %>" class="form-control <%= (errors.addr)?'is-invalid':'' %>"> <!-- 2 -->
             <% if(errors.addr){ %> <!-- 3 -->
@@ -70,7 +89,8 @@
 
         <div class="form-group row">
           <label for="newPassword" class="col-sm-3 col-form-label">새로운 비밀번호
-          <small style="color:red">*</small></label>
+          </label>
+
           <div class="col-sm-9 col-sm-offset-3">
             <input type="password" id="newPassword" name="newPassword" value="" class="form-control <%= (errors.newPassword)?'is-invalid':'' %>"> <!-- 2 -->
             <% if(errors.newPassword){ %> <!-- 3 -->
@@ -81,7 +101,8 @@
 
         <div class="form-group row">
           <label for="passwordConfirmation" class="col-sm-3 col-form-label">비밀번호 확인
-          <small style="color:red">*</small> </label>
+          </label>
+
           <div class="col-sm-9 col-sm-offset-3">
             <input type="password" id="passwordConfirmation" name="passwordConfirmation" value="" class="form-control <%= (errors.passwordConfirmation)?'is-invalid':'' %>"> <!-- 2 -->
             <% if(errors.passwordConfirmation){ %> <!-- 3 -->
