wip/ image upload for chat

--- a/views/dm/index.ejs
+++ b/views/dm/index.ejs
@@ -36,10 +36,14 @@
           <div class="msg_history">
             <!-- messages will be appended here -->
           </div>
+          <div>
+            <input type="file" name="attachment" class="form-control-file" id="attachment">
+          </div>
           <div class="type_msg">
             <div class="input_msg_write">
               <input type="text" class="write_msg" placeholder="Type a message" />
-              <button class="msg_send_btn" type="button"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
+              <button class="img_upload_btn" type="button"><i class="far fa-image" aria-hidden="true"></i></button>
+              <button class="msg_send_btn" type="button"><i class="far fa-paper-plane" aria-hidden="true"></i></button>
             </div>
           </div>
           <p id="temp"><br>채팅 목록에서 대화 상대를 선택해주세요. </p>
