--- a/views/dm/partials/chat-style.ejs
+++ b/views/dm/partials/chat-style.ejs
@@ -130,6 +130,19 @@
     min-height: 48px;
     width: 100%;
   }
+  .img_upload_btn {
+    background: #05728f none repeat scroll 0 0;
+    border: medium none;
+    border-radius: 50%;
+    color: #fff;
+    cursor: pointer;
+    font-size: 17px;
+    height: 33px;
+    position: absolute;
+    right: 35px;
+    top: 11px;
+    width: 33px;
+  }
 
   .type_msg {border-top: 1px solid #c4c4c4;position: relative;}
   .msg_send_btn {
