imprv/ removed switch for post type checking

--- a/views/partials/boards/new/form.ejs
+++ b/views/partials/boards/new/form.ejs
@@ -13,8 +13,8 @@
 
   <div class="form-group">
     <!-- 2 -->
-    <label for="attachment"><font style="color:#6464FF; font-weight:bold">첨부 파일</font> 이미지 파일 (jpg, jpeg, gif, png) 만 업로드가 가능합니다.</label>
     <input type="file" name="attachment" class="form-control-file" id="attachment">
+    <label for="attachment" style="color:#6464FF; font-weight:bold">첨부 파일은 이미지 파일 (jpg, jpeg, gif, png) 만 업로드가 가능합니다.</label>
   </div>
 
 
