--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -37,13 +37,13 @@
         <% if(errors.login){ %>
           <div class="invalid-feedback d-block"><%= errors.login %></div>
         <% } %>
-
         <div class="mt-3">
           <input class="btn btn-primary" type="submit" value="로그인">
         </div>
-
       </form>
 
     </div>
+          <a class="btn btn-primary" href="/users/checkid">비번초기화</a>
   </body>
+
 </html>
